--- a/style.css
+++ b/style.css
@@ -2,22 +2,25 @@ body {
     margin: 0;
 }
 
-.recipes-title {
-    margin: 0px 0px 30px 0px;
-    width: 100%;
-}
-
 .recipes-title h1 {
     font-family: "Bona Nova SC", serif;
     font-weight: 400;
     font-style: normal;
     font-size: 3em;
     margin: 0;
+    padding: 20px;
 }
 
 .recipes-title h1 a {
     text-decoration: none;
     color: inherit; 
+}
+.recipes-header {
+    display: flex;
+    justify-content: space-between;
+}
+.recipes-header-child {
+    flex: 1;
 }
 
 .page-title {
@@ -39,9 +42,16 @@ body {
     color: inherit; 
 }
 
+.grid-navbar-box div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .grid-navbar-box {
     display: grid;
-    grid-template-columns: 12% 12% 12% 12%;
+    grid-template-columns: auto auto auto auto;
+    column-gap: 50px;
     justify-content: center;
     text-align: center;
 }
@@ -76,4 +86,43 @@ body {
 .grid-navbar-box h1 a:hover::before {
     transform-origin: left;
     transform: scaleX(1);
+}
+
+.grid-deli-box {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    justify-content: space-between;
+    text-align: center;
+    margin: 0px 150px 0px 150px;
+}
+.deli-section {
+    margin-top: 15vh;
+}
+
+.deli{
+    width: 200px;
+	height: 280px;
+	border-radius: 12px;
+	background: linear-gradient(170deg, #383838, #1f1f1f);
+	position: relative;
+	box-shadow: 0 25px 50px rgba(0, 0, 0, 0.55);
+	cursor: pointer;
+	transition: all 0.3s;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+}
+
+.deli:hover {
+	transform: scale(1.54);
+}
+
+.deli > h1 {
+	font-size: 1.5rem;
+	word-break: break-word;
+}
+.deli > p {
+	font-size: 1.2rem;
 }
