--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+}
+
 body {
     margin: 0;
 }
@@ -6,7 +10,7 @@ body {
     font-family: "Bona Nova SC", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 3em;
+    font-size: 4em;
     margin: 0;
     padding: 20px;
 }
@@ -61,6 +65,7 @@ body {
     font-family: "Bona Nova SC", serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 2.5em;
 }
 
 .grid-navbar-box h1 a {
@@ -75,7 +80,7 @@ body {
     width: 100%;
     height: 4px;
     border-radius: 4px;
-    background-color: #18272F;
+    background-color: hsl(0, 8%, 87%);
     bottom: 0;
     left: 0;
     transform-origin: right;
@@ -88,18 +93,18 @@ body {
     transform: scaleX(1);
 }
 
-.grid-deli-box {
+.grid-card-box {
     display: grid;
     grid-template-columns: auto auto auto auto;
     justify-content: space-between;
     text-align: center;
     margin: 0px 150px 0px 150px ;
 }
-.deli-section {
+.card-section {
     margin-top: 10vh;
 }
 
-#deli-section-title {
+#card-section-title {
     font-family: "Bona Nova SC", serif;
     font-weight: 400;
     font-style: normal;
@@ -108,7 +113,7 @@ body {
     text-align: center;
 }
 
-.deli.box-1{
+.card.box-1{
     width: 200px;
 	height: 280px;
 	border-radius: 12px;
@@ -127,7 +132,7 @@ body {
 	color: #fff;
 }
 
-.deli.box-2{
+.card.box-2{
     width: 200px;
 	height: 280px;
 	border-radius: 12px;
@@ -146,7 +151,7 @@ body {
 	color: #fff;
 }
 
-.deli.box-3{
+.card.box-3{
     width: 200px;
 	height: 280px;
 	border-radius: 12px;
@@ -165,7 +170,7 @@ body {
 	color: #fff;
 }
 
-.deli.box-4{
+.card.box-4{
     width: 200px;
 	height: 280px;
 	border-radius: 12px;
@@ -184,14 +189,55 @@ body {
 	color: #fff;
 }
 
-.deli:hover {
+.card:hover {
 	transform: scale(1.54);
 }
 
-.deli > h1 {
+.card > h1 {
 	font-size: 1.9rem;
 	word-break: break-word;
     font-family: "Bona Nova SC", serif;
     font-weight: 400;
     font-style: normal;
+}
+.food-container {
+    margin: 3vh 0 0 0;
+}
+
+.food-title {
+    text-align: center;
+}
+.food-title h1 {
+    font-family: "Bona Nova SC", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 3em; 
+}
+.food-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    justify-content: center;
+    row-gap: 2vh;
+}
+.food-desc {
+    width: 500px;   
+}
+.food-desc h1 {
+    text-align: justify;
+    font-size: 1.2em;
+    font-family: "Bona Nova SC", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.food.box-1 {
+    width: 500px;
+	height: 350px;
+	background-image: url(images/sinigang.webp);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+	position: relative;
+	cursor: pointer;
+	color: #fff;
 }
