updated css for recipe

--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ body {
 .food-container {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto auto auto auto;
     justify-content: center;
     row-gap: 2vh;
 }
@@ -235,9 +235,62 @@ body {
 	height: 350px;
 	background-image: url(images/sinigang.webp);
     background-size: cover;
-    background-position: center;
+    /* background-position: center; */
     background-repeat: no-repeat;
 	position: relative;
 	cursor: pointer;
 	color: #fff;
+}
+.food-metadata-banner {
+    background-color: rgb(0, 0, 0);
+    border-top-left-radius: 10px; /* Adjust this value as needed */
+    border-top-right-radius: 10px; /* Adjust this value as needed */
+    height: 10px;
+}
+.food-metadata {
+    border: 0.5px solid rgb(204, 200, 200);
+    border-radius: 10px;
+    width: 500px;
+}
+.food-metadata-content {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
+    padding: 1em 0 1em 0;
+    row-gap: 30px;
+    padding: 0 0 0 10px;
+}
+.food-metadata-content-item {
+    width: 166px;
+}
+.food-metadata-content-item h1 {
+    font-family: "Bona Nova SC", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1.4em;
+}
+.food-metadata-content-item h2 {
+    font-family: "Bona Nova SC", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.2em; 
+}
+.food-ingredients-title h1 {
+    font-family: "Bona Nova SC", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2.5em;
+    margin-bottom: 10px; 
+}
+.food-ingredients-list {
+    font-family: "Bona Nova SC", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.2em;
+}
+.food-ingredients-list ul {
+    padding-left: 20px;
+}
+.food-ingredients-list li{
+    margin-bottom: 10px;
 }
