--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ body {
 .grid-card-box {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    justify-content: space-between;
+    column-gap: 150px;
+    justify-content: center;
     text-align: center;
     margin: 0px 150px 0px 150px ;
 }
@@ -233,11 +234,6 @@ body {
 .food.box-1 {
     width: 500px;
 	height: 350px;
-	background-image: url(images/sinigang.webp);
-    background-size: cover;
-    /* background-position: center; */
-    background-repeat: no-repeat;
-	position: relative;
 	cursor: pointer;
 	color: #fff;
 }
@@ -259,6 +255,7 @@ body {
     padding: 1em 0 1em 0;
     row-gap: 30px;
     padding: 0 0 0 10px;
+    overflow: hidden;
 }
 .food-metadata-content-item {
     width: 166px;
@@ -267,7 +264,7 @@ body {
     font-family: "Bona Nova SC", serif;
     font-weight: 700;
     font-style: normal;
-    font-size: 1.4em;
+    font-size: 1.3em;
 }
 .food-metadata-content-item h2 {
     font-family: "Bona Nova SC", serif;
@@ -294,3 +291,4 @@ body {
 .food-ingredients-list li{
     margin-bottom: 10px;
 }
+
