--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ body {
 .food-container {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto;
     justify-content: center;
     row-gap: 2vh;
 }
@@ -291,4 +291,19 @@ body {
 .food-ingredients-list li{
     margin-bottom: 10px;
 }
-
+.food-steps {
+    width: 500px;
+}
+.food-steps img {
+    width: 500px;
+}
+.food-steps h1, h2, p, img {
+    font-family: "Bona Nova SC", serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-bottom: 20px;
+}
+.food-steps-title {
+    font-size: 1.3em;
+    margin-bottom: 20px;
+}
